<resources>
    <string name="app_name">SDKProject</string>
    <string name="tvItemPostTitle">TextView</string>
    <string name="tvItemPostBody">TextView</string>
    <string name="tvItemPostUser">écrit par :</string>
    <string name="btnLirePlus">Lire plus</string>
    <string name="tvItemPostTag">TextView</string>
    <string name="tvLabelUserFirstName">Prénom :</string>
    <string name="tvLabelUserLastName">Nom :</string>
    <string name="tvLabelUserAge">Age :</string>
    <string name="tvLabelUserEmail">Email :</string>
</resources>