<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ViewProfilActivity">

    <TextView
        android:id="@+id/tvLabelUserFirtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLabelUserFirstName"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvItemProfilUserFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvLabelUserLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLabelUserLastName"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvItemProfilUserLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvLabelUserAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLabelUserAge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvItemProfilUseAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvLabelUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvLabelUserEmail"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvItemProfilUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>