<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:elevation="5dp"
        app:cardBackgroundColor="#DEECCE"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvItemPostTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/tvItemPostTitle"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvItemPostBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/tvItemPostBody" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvItemPostUser"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="auto"
                    android:onClick="viewProfil"
                    android:text="@string/tvItemPostUser"
                    android:textSize="11sp"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/btnLirePlus"
                    android:layout_width="250dp"
                    android:layout_height="35dp"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:drawableEnd="@android:drawable/ic_menu_more"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:onClick="onClick"
                    android:text="@string/btnLirePlus"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    app:iconPadding="2dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvItemPostTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvItemPostTag"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>